package com.Jayshree.MarsRover;

public enum Direction {
    NORTH,
    EAST,
    SOUTH,
    WEST
}
