package com.Jayshree.MarsRover;

public enum Status {
    NO_ERROR,
    ERROR_OVER_EDGE,
    ERROR_TAKEN_SPOT,
    ERROR_BAD_MOVEMENT_STRING,
}